--- a/index.html
+++ b/index.html
@@ -1,1 +1,315 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Admin Dahsboard Project</title>
 
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
+    <div class="container">
+
+        <div class="sidebar">
+            <ul>
+                <li>
+                    <div class="icon">
+                        <img src="icon-placeholder.png">
+                    </div>
+                    <a href="#">Dashboard</a>
+                </li>
+                <li>
+                    <div class="icon">
+                        <img src="icon-placeholder.png">
+                    </div>
+                    <a href="#">Home</a>
+                </li>
+                <li>
+                    <div class="icon">
+                        <img src="icon-placeholder.png">
+                    </div>
+                    <a href="#">Profile</a>
+                </li>
+                <li>
+                    <div class="icon">
+                        <img src="icon-placeholder.png">
+                    </div>
+                    <a href="#">Messages</a>
+                </li>
+                <li>
+                    <div class="icon">
+                        <img src="icon-placeholder.png">
+                    </div>
+                    <a href="#">History</a>
+                </li>
+                <li>
+                    <div class="icon">
+                        <img src="icon-placeholder.png">
+                    </div>
+                    <a href="#">Tasks</a>
+                </li>
+                <li>
+                    <div class="icon">
+                        <img src="icon-placeholder.png">
+                    </div>
+                    <a href="#">Communities</a>
+                </li>
+                <li>
+                    <div class="icon">
+                        <img src="icon-placeholder.png">
+                    </div>
+                    <a href="#">Settings</a>
+                </li>
+                <li>
+                    <div class="icon">
+                        <img src="icon-placeholder.png">
+                    </div>
+                    <a href="#">Support</a>
+                </li>
+                <li>
+                    <div class="icon">
+                        <img src="icon-placeholder.png">
+                    </div>
+                    <a href="#">Privacy</a>
+                </li>
+            </ul>
+        </div>
+
+        <div class="header">
+            <ul class="header-list-top">
+                <li class="search">
+                    <div class="search-icon">
+                        <img src="icon-placeholder-black.png">
+                    </div>
+                    <input type="search">
+                </li>
+
+                <li class="icon">
+                    <a href="#"><img src="icon-placeholder-black.png"></a>
+                </li>
+
+                <li class="avatar">
+                    <a href="#"><img src="avatar-placeholder.png"></a>
+                </li>
+
+                <li class="user-name-small">
+                    Morgan Oakley
+                </li>
+
+            </ul>
+
+            <ul class="header-list-bottom">
+                <li class="avatar-with-name">
+                    <a href="#"><img src="avatar-placeholder.png"></a>
+                    <p>Hi there,</p>
+                    <p>Morgan Oakley (@morgan)</p>
+                </li>
+
+                <li class="button-start nav-buttons">
+                    <a href="#">New</a>
+                </li>
+
+                <li class="nav-buttons">
+                    <a href="#">Upload</a>
+                </li>
+
+                <li class="nav-buttons">
+                    <a href="#">Share</a>
+                </li>
+
+            </ul>
+        </div>
+
+        <div class="dash">
+            
+            <h2>Your Projects</h2>
+            <h2>Announcements</h2>
+
+
+            <div class="card-container">
+                <div class="card">
+                    <h3>Super Cool Project</h3>
+                    <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
+                    <ul>
+                        <li class="card-icons">
+                            <a href="#">
+                                <img src="icon-placeholder-black.png">
+                            </a>
+                        </li>
+                        <li class="card-icons">
+                            <a href="#">
+                                <img src="icon-placeholder-black.png">
+                            </a>
+                        </li>
+                        <li class="card-icons">
+                            <a href="#">
+                                <img src="icon-placeholder-black.png">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="card">
+                    <h3>Super Cool Project</h3>
+                    <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
+                    <ul>
+                        <li class="card-icons">
+                            <a href="#">
+                                <img src="icon-placeholder-black.png">
+                            </a>
+                        </li>
+                        <li class="card-icons">
+                            <a href="#">
+                                <img src="icon-placeholder-black.png">
+                            </a>
+                        </li>
+                        <li class="card-icons">
+                            <a href="#">
+                                <img src="icon-placeholder-black.png">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="card">
+                    <h3>Super Cool Project</h3>
+                    <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
+                    <ul>
+                        <li class="card-icons">
+                            <a href="#">
+                                <img src="icon-placeholder-black.png">
+                            </a>
+                        </li>
+                        <li class="card-icons">
+                            <a href="#">
+                                <img src="icon-placeholder-black.png">
+                            </a>
+                        </li>
+                        <li class="card-icons">
+                            <a href="#">
+                                <img src="icon-placeholder-black.png">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="card">
+                    <h3>Super Cool Project</h3>
+                    <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
+                    <ul>
+                        <li class="card-icons">
+                            <a href="#">
+                                <img src="icon-placeholder-black.png">
+                            </a>
+                        </li>
+                        <li class="card-icons">
+                            <a href="#">
+                                <img src="icon-placeholder-black.png">
+                            </a>
+                        </li>
+                        <li class="card-icons">
+                            <a href="#">
+                                <img src="icon-placeholder-black.png">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="card">
+                    <h3>Super Cool Project</h3>
+                    <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
+                    <ul>
+                        <li class="card-icons">
+                            <a href="#">
+                                <img src="icon-placeholder-black.png">
+                            </a>
+                        </li>
+                        <li class="card-icons">
+                            <a href="#">
+                                <img src="icon-placeholder-black.png">
+                            </a>
+                        </li>
+                        <li class="card-icons">
+                            <a href="#">
+                                <img src="icon-placeholder-black.png">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="card">
+                    <h3>Super Cool Project</h3>
+                    <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
+                    <ul>
+                        <li class="card-icons">
+                            <a href="#">
+                                <img src="icon-placeholder-black.png">
+                            </a>
+                        </li>
+                        <li class="card-icons">
+                            <a href="#">
+                                <img src="icon-placeholder-black.png">
+                            </a>
+                        </li>
+                        <li class="card-icons">
+                            <a href="#">
+                                <img src="icon-placeholder-black.png">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+
+            <div class="side-card">
+                <div class="side-card-section">
+                    <h5>Site Maintenance</h5>
+                    <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
+                </div>
+
+                <div class="side-card-section">
+                    <h5>Community Share Day</h5>
+                    <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
+                </div>
+
+                <div class="side-card-section">
+                    <h5>Updated Privacy Policy</h5>
+                    <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
+                </div>
+            </div>
+
+            <h2 id="trending">Trending</h2>
+
+            <div class="side-card">
+                <div class="side-card-users">
+                    <img src="avatar-placeholder.png">
+                    <p class="handle">@tegan</p>
+                    <p class="handle-desriptiomn">World Peace Builder</p>
+                </div>
+
+                <div class="side-card-users">
+                    <img src="avatar-placeholder.png">
+                    <p class="handle">@tegan</p>
+                    <p class="handle-desriptiomn">World Peace Builder</p>
+                </div>
+
+                <div class="side-card-users">
+                    <img src="avatar-placeholder.png">
+                    <p class="handle">@tegan</p>
+                    <p class="handle-desriptiomn">World Peace Builder</p>
+                </div>
+
+                <div class="side-card-users">
+                    <img src="avatar-placeholder.png">
+                    <p class="handle">@tegan</p>
+                    <p class="handle-desriptiomn">World Peace Builder</p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    
+</body>
+</html>
