Updated images and some finishign touches styling.

--- a/index.html
+++ b/index.html
@@ -16,61 +16,61 @@
             <ul>
                 <li>
                     <div class="icon">
-                        <img src="icon-placeholder.png">
+                        <img src="images/view-dashboard.svg">
                     </div>
                     <a href="#">Dashboard</a>
                 </li>
                 <li>
                     <div class="icon">
-                        <img src="icon-placeholder.png">
+                        <img src="images/home.svg">
                     </div>
                     <a href="#">Home</a>
                 </li>
                 <li>
                     <div class="icon">
-                        <img src="icon-placeholder.png">
+                        <img src="images/card-account-details-outline.svg">
                     </div>
                     <a href="#">Profile</a>
                 </li>
                 <li>
                     <div class="icon">
-                        <img src="icon-placeholder.png">
+                        <img src="images/message.svg">
                     </div>
                     <a href="#">Messages</a>
                 </li>
                 <li>
                     <div class="icon">
-                        <img src="icon-placeholder.png">
+                        <img src="images/clock-time-four.svg">
                     </div>
                     <a href="#">History</a>
                 </li>
                 <li>
                     <div class="icon">
-                        <img src="icon-placeholder.png">
+                        <img src="images/note-multiple.svg">
                     </div>
                     <a href="#">Tasks</a>
                 </li>
                 <li>
                     <div class="icon">
-                        <img src="icon-placeholder.png">
+                        <img src="images/account-group.svg">
                     </div>
                     <a href="#">Communities</a>
                 </li>
                 <li>
                     <div class="icon">
-                        <img src="icon-placeholder.png">
+                        <img src="images/cog.svg">
                     </div>
                     <a href="#">Settings</a>
                 </li>
                 <li>
                     <div class="icon">
-                        <img src="icon-placeholder.png">
+                        <img src="images/help-box.svg">
                     </div>
                     <a href="#">Support</a>
                 </li>
                 <li>
                     <div class="icon">
-                        <img src="icon-placeholder.png">
+                        <img src="images/shield-check.svg">
                     </div>
                     <a href="#">Privacy</a>
                 </li>
@@ -81,17 +81,17 @@
             <ul class="header-list-top">
                 <li class="search">
                     <div class="search-icon">
-                        <img src="icon-placeholder-black.png">
+                        <img src="images/magnify.svg">
                     </div>
                     <input type="search">
                 </li>
 
                 <li class="icon">
-                    <a href="#"><img src="icon-placeholder-black.png"></a>
+                    <a href="#"><img src="images/bell-ring-outline.svg"></a>
                 </li>
 
                 <li class="avatar">
-                    <a href="#"><img src="avatar-placeholder.png"></a>
+                    <a href="#"><img src="images/avatar-placeholder.png"></a>
                 </li>
 
                 <li class="user-name-small">
@@ -102,7 +102,7 @@
 
             <ul class="header-list-bottom">
                 <li class="avatar-with-name">
-                    <a href="#"><img src="avatar-placeholder.png"></a>
+                    <a href="#"><img src="images/avatar-placeholder.png"></a>
                     <p>Hi there,</p>
                     <p>Morgan Oakley (@morgan)</p>
                 </li>
@@ -135,39 +135,17 @@
                     <ul>
                         <li class="card-icons">
                             <a href="#">
-                                <img src="icon-placeholder-black.png">
+                                <img src="images/star-check-outline.svg">
                             </a>
                         </li>
                         <li class="card-icons">
                             <a href="#">
-                                <img src="icon-placeholder-black.png">
+                                <img src="images/eye-plus-outline.svg">
                             </a>
                         </li>
                         <li class="card-icons">
                             <a href="#">
-                                <img src="icon-placeholder-black.png">
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-
-                <div class="card">
-                    <h3>Super Cool Project</h3>
-                    <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
-                    <ul>
-                        <li class="card-icons">
-                            <a href="#">
-                                <img src="icon-placeholder-black.png">
-                            </a>
-                        </li>
-                        <li class="card-icons">
-                            <a href="#">
-                                <img src="icon-placeholder-black.png">
-                            </a>
-                        </li>
-                        <li class="card-icons">
-                            <a href="#">
-                                <img src="icon-placeholder-black.png">
+                                <img src="images/source-branch.svg">
                             </a>
                         </li>
                     </ul>
@@ -179,39 +157,17 @@
                     <ul>
                         <li class="card-icons">
                             <a href="#">
-                                <img src="icon-placeholder-black.png">
+                                <img src="images/star-check-outline.svg">
                             </a>
                         </li>
                         <li class="card-icons">
                             <a href="#">
-                                <img src="icon-placeholder-black.png">
+                                <img src="images/eye-plus-outline.svg">
                             </a>
                         </li>
                         <li class="card-icons">
                             <a href="#">
-                                <img src="icon-placeholder-black.png">
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-
-                <div class="card">
-                    <h3>Super Cool Project</h3>
-                    <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
-                    <ul>
-                        <li class="card-icons">
-                            <a href="#">
-                                <img src="icon-placeholder-black.png">
-                            </a>
-                        </li>
-                        <li class="card-icons">
-                            <a href="#">
-                                <img src="icon-placeholder-black.png">
-                            </a>
-                        </li>
-                        <li class="card-icons">
-                            <a href="#">
-                                <img src="icon-placeholder-black.png">
+                                <img src="images/source-branch.svg">
                             </a>
                         </li>
                     </ul>
@@ -223,17 +179,17 @@
                     <ul>
                         <li class="card-icons">
                             <a href="#">
-                                <img src="icon-placeholder-black.png">
+                                <img src="images/star-check-outline.svg">
                             </a>
                         </li>
                         <li class="card-icons">
                             <a href="#">
-                                <img src="icon-placeholder-black.png">
+                                <img src="images/eye-plus-outline.svg">
                             </a>
                         </li>
                         <li class="card-icons">
                             <a href="#">
-                                <img src="icon-placeholder-black.png">
+                                <img src="images/source-branch.svg">
                             </a>
                         </li>
                     </ul>
@@ -245,17 +201,61 @@
                     <ul>
                         <li class="card-icons">
                             <a href="#">
-                                <img src="icon-placeholder-black.png">
+                                <img src="images/star-check-outline.svg">
                             </a>
                         </li>
                         <li class="card-icons">
                             <a href="#">
-                                <img src="icon-placeholder-black.png">
+                                <img src="images/eye-plus-outline.svg">
                             </a>
                         </li>
                         <li class="card-icons">
                             <a href="#">
-                                <img src="icon-placeholder-black.png">
+                                <img src="images/source-branch.svg">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="card">
+                    <h3>Super Cool Project</h3>
+                    <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
+                    <ul>
+                        <li class="card-icons">
+                            <a href="#">
+                                <img src="images/star-check-outline.svg">
+                            </a>
+                        </li>
+                        <li class="card-icons">
+                            <a href="#">
+                                <img src="images/eye-plus-outline.svg">
+                            </a>
+                        </li>
+                        <li class="card-icons">
+                            <a href="#">
+                                <img src="images/source-branch.svg">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="card">
+                    <h3>Super Cool Project</h3>
+                    <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
+                    <ul>
+                        <li class="card-icons">
+                            <a href="#">
+                                <img src="images/star-check-outline.svg">
+                            </a>
+                        </li>
+                        <li class="card-icons">
+                            <a href="#">
+                                <img src="images/eye-plus-outline.svg">
+                            </a>
+                        </li>
+                        <li class="card-icons">
+                            <a href="#">
+                                <img src="images/source-branch.svg">
                             </a>
                         </li>
                     </ul>
@@ -284,25 +284,25 @@
 
             <div class="side-card">
                 <div class="side-card-users">
-                    <img src="avatar-placeholder.png">
+                    <img src="images/avatar-placeholder.png">
                     <p class="handle">@tegan</p>
                     <p class="handle-desriptiomn">World Peace Builder</p>
                 </div>
 
                 <div class="side-card-users">
-                    <img src="avatar-placeholder.png">
+                    <img src="images/avatar-placeholder.png">
                     <p class="handle">@tegan</p>
                     <p class="handle-desriptiomn">World Peace Builder</p>
                 </div>
 
                 <div class="side-card-users">
-                    <img src="avatar-placeholder.png">
+                    <img src="images/avatar-placeholder.png">
                     <p class="handle">@tegan</p>
                     <p class="handle-desriptiomn">World Peace Builder</p>
                 </div>
 
                 <div class="side-card-users">
-                    <img src="avatar-placeholder.png">
+                    <img src="images/avatar-placeholder.png">
                     <p class="handle">@tegan</p>
                     <p class="handle-desriptiomn">World Peace Builder</p>
                 </div>
